substrate/frame/support/test/tests/pallet_ui/call_span_for_error.stderr
error[E0308]: mismatched types
  --> tests/pallet_ui/call_span_for_error.rs:32:15
   |
32 |             return Err(DispatchError::BadOrigin);
   |                    --- ^^^^^^^^^^^^^^^^^^^^^^^^ expected `DispatchErrorWithPostInfo<PostDispatchInfo>`, found `DispatchError`
   |                    |
   |                    arguments to this enum variant are incorrect
   |
   = note: expected struct `DispatchErrorWithPostInfo<PostDispatchInfo>`
                found enum `frame_support::pallet_prelude::DispatchError`
help: the type constructed contains `frame_support::pallet_prelude::DispatchError` due to the type of the argument passed
  --> tests/pallet_ui/call_span_for_error.rs:32:11
   |
32 |             return Err(DispatchError::BadOrigin);
   |                    ^^^^------------------------^
   |                        |
   |                        this argument influences the type of `Err`
note: tuple variant defined here
  --> $RUST/core/src/result.rs
   |
   |     Err(#[stable(feature = "rust1", since = "1.0.0")] E),
   |     ^^^
help: call `Into::into` on this expression to convert `frame_support::pallet_prelude::DispatchError` into `DispatchErrorWithPostInfo<PostDispatchInfo>`
   |
32 |             return Err(DispatchError::BadOrigin.into());
   |                                                +++++++
